--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <meta name="description" content="">
-  <meta name="author" content="">
-  <title>SpirIT 2.0</title>
+  <meta name="description" content="Portfolio Haseeb Minhas">
+  <meta name="author" content="Haseeb Minhas">
+  <title>Haseeb Minhas</title>
   <link rel="stylesheet" href="assets/css/color.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Mono|Inconsolata" rel="stylesheet">
   <link href="https://cdn.materialdesignicons.com/2.0.46/css/materialdesignicons.min.css" rel="stylesheet">
@@ -14,13 +14,7 @@
 <body>
 
 <!--Switcher-->
-  <div class="style-switcher">
-    <span class="style-switcher__control"></span>
-    <div class="style-switcher__list">
-      <a class="style-switcher__link style-switcher__link--color"></a>
-      <a class="style-switcher__link style-switcher__link--mono"></a>
-    </div>
-  </div>
+  
 <!--Switcher-->
 
 <!--Main menu-->
@@ -78,7 +72,7 @@
         </div>
         <div class="col-md-8">
           <p class="personal-profile__name">HASEEB MINHAS_</p>
-          <p class="personal-profile__work">frontend developer, QA-engineer</p>
+          <p class="personal-profile__work">Student @ DePaul University</p>
           <div class="personal-profile__contacts">
             <dl class="contact-list contact-list__opacity-titles">
               <dt>Age:</dt>
