--- a/index.html
+++ b/index.html
@@ -528,7 +528,7 @@
               <dd><a href="tel:3125909586">1 (312) 590-9586</a></dd>
               
               <dt>Email:</dt>
-              <dd><a href="mailto:haseebminhas2000@mail.com">haseebminhas2000@mail.com</a></dd>
+              <dd><a href="mailto:haseebminhas2000@mail.com">haseeb@minhastraders.com</a></dd>
             </dl>
           </div>
           <div class="contacts__social">
