--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <div class="container">
       <div class="row personal-profile">
         <div class="col-md-4 personal-profile__avatar">
-          <img class="" src="http://via.placeholder.com/350x400" alt="avatar">
+          <img class="" src="../../../Desktop/WhatsApp Image 2021-04-18 at 12.45.33 PM.jpeg" alt="avatar">
         </div>
         <div class="col-md-8">
           <p class="personal-profile__name">HASEEB MINHAS_</p>
@@ -102,11 +102,8 @@
       <div class="col-md-10">
         <h2 id="hello_header" class="section__title">Hi_</h2>
         <p class="section__description">
-          I am Junior Web developer able to build a Web presence from the ground up - from concept, navigation,
-          layout and programming to UX and SEO. Skilled at writing well-designed, testable and efficient code using
-          current best practices in Web development. Fast learner, hard worker and team player who is proficient in
-          an array of scripting languages and multimedia Web tools.
-        </p>
+          I am a senior majoring in Management Information systems and minoring in Accounting. Fast learner, hard worker and team player who is proficient in
+          an array of scripting languages and multimedia Web tools. </p>
         <a href="" class="section_btn site-btn"><img src="assets/img/img_btn_icon.png" alt="">Download CV</a>
       </div>
     </div>
@@ -167,7 +164,7 @@
           </p>
         </div>
         <div class="resume-list__block">
-          <p class="resume-list__block-title">Tech university</p>
+          <p class="resume-list__block-title">DePaul university</p>
           <p class="resume-list__block-date">2004 - 2005</p>
           <p>
             Awesome developer, lorem ipsum dolor sit amet, conse ctetur adipisicing elit, sed do eius-
