--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <div class="container">
       <div class="row personal-profile">
         <div class="col-md-4 personal-profile__avatar">
-          <img class="" src="../../../Desktop/WhatsApp Image 2021-04-18 at 12.45.33 PM.jpeg" alt="avatar">
+          <img class="" src="assets/img/WhatsApp Image 2021-04-18 at 12.45.33 PM.jpeg" alt="avatar">
         </div>
         <div class="col-md-8">
           <p class="personal-profile__name">HASEEB MINHAS_</p>
