--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
               <li><a href="#hello">Hello</a></li>
               <li><a href="#resume">Resume</a></li>
               <li><a href="#portfolio">Portfolio</a></li>
-              <li><a href="#testimonials">testimonials</a></li>
+              <li><a href="#testimonials">tstimonials</a></li>
               <li><a href="#blog">blog</a></li>
               <li><a href="#contact">Contact</a></li>
             </ul>
@@ -82,7 +82,7 @@
               <dt>Email:</dt>
               <dd><a href="mailto:mail@mail.com">haseeb@minhastraders.com&nbsp;</a></dd>
               <dt>Address:</dt>
-              <dd>1237 west fullerton Avenue Apt 410</dd>
+              <dd>1237 west fullerton Avenue</dd>
             </dl>
           </div>
           <p class="personal-profile__social">
@@ -102,8 +102,7 @@
       <div class="col-md-10">
         <h2 id="hello_header" class="section__title">Hi_</h2>
         <p class="section__description">
-          I am a senior majoring in Management Information systems and minoring in Accounting. Fast learner, hard worker and team player who is proficient in
-          an array of scripting languages and multimedia Web tools. </p>
+          My name is Haseeb. I am a hard working, highly motivated, and enthusiastic young professional with an aim to pursue a degree in&nbsp; &nbsp;Management Informations system with a minor in accounting and marketing. I believe helping others and doing hardwork is the key to success. I make it a habit to work beyond expectations in order to grow both myself, and the organizations I am a part of. With the growth of technology in the financial field, I am pursuing a relevant education in order to serve emerging business.</p>
         <a href="" class="section_btn site-btn"><img src="assets/img/img_btn_icon.png" alt="">Download CV</a>
       </div>
     </div>
@@ -118,38 +117,30 @@
       <div class="col-md-10">
         <h2 id="resume_header" class="section__title">Resume_</h2>
         <p class="section__description">
-          Lorem ipsum dolor sit amet, <i><b>communication</b></i> adipisicing elit, <i><b>helpful</b></i> eiusmod
-          tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud <i><b>sence of
-          humour</b></i> ullamco laboris nisi ut <i><b>honest</b></i> ea commodo consequat. Duis aute irure dolor in
-          upper-intermediate english level velit  dolore eu ivivdtevoluptatem ontend developer.
-        </p>
+        &nbsp; </p>
       </div>
     </div>
     <div class="row">
       <div class="col-md-8 section__resume resume-list">
         <h3 class="resume-list_title">education</h3>
         <div class="resume-list__block">
-          <p class="resume-list__block-title">DePaul University </p>
-          <p class="resume-list__block-date">2006 - 2010</p>
+          <p class="resume-list__block-title">DePaul University -&nbsp;DREIHAUS COLLEGE OF BUSINESS </p>
+          <p class="resume-list__block-date">2019 - 2023</p>
           <p>
             Bachelor of Science - Management Information System
           </p>
         </div>
         <div class="resume-list__block">
-          <p class="resume-list__block-title">School of Dreihaus college of Business</p>
-          <p class="resume-list__block-date">2004 - 2005</p>
+          <p class="resume-list__block-title">Alpha college&nbsp;</p>
+          <p class="resume-list__block-date">2017 - 2019</p>
           <p>
-            Awesome student, lorem ipsum dolor sit amet, conse ctetur adipisicing elit, sed do eius-
-            mod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
-          </p>
+          &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; A levels in Maths, Accounting , Business&nbsp;&nbsp;</p>
         </div>
         <div class="resume-list__block">
-          <p class="resume-list__block-title">Lorem Ipsum School</p>
-          <p class="resume-list__block-date">2003 - 2006</p>
+          <p class="resume-list__block-title">Head Start School System</p>
+          <p class="resume-list__block-date">2004 - 2017</p>
           <p>
-            Student, Lorem ipsum dolor sit amet, consecte tur adipisicing elit, sed do eiusmod tempor
-            incididunt ut
-          </p>
+          &nbsp; </p>
         </div>
       </div>
     </div>
@@ -157,22 +148,20 @@
       <div class="col-md-8 section__resume resume-list">
         <h3 class="resume-list_title">employment</h3>
         <div class="resume-list__block">
-          <p class="resume-list__block-title">Apple</p>
-          <p class="resume-list__block-date">2006 - 2010</p>
+          <p class="resume-list__block-title">Materials xchange</p>
+          <p class="resume-list__block-date">Sep 2021 - Present&nbsp;&nbsp;</p>
           <p>
             Senior Full Stack Developer
           </p>
         </div>
         <div class="resume-list__block">
-          <p class="resume-list__block-title">DePaul university</p>
+          <p class="resume-list__block-title">DePaul university- print and mailing services</p>
           <p class="resume-list__block-date">2004 - 2005</p>
           <p>
-            Awesome developer, lorem ipsum dolor sit amet, conse ctetur adipisicing elit, sed do eius-
-            mod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
-          </p>
+          &nbsp; </p>
         </div>
         <div class="resume-list__block">
-          <p class="resume-list__block-title">Molly’s studio</p>
+          <p class="resume-list__block-title">minhas traders - import manager&nbsp;</p>
           <p class="resume-list__block-date">2003 - 2006</p>
           <p>
             Programmer Lorem ipsum dolor sit amet, consecte tur adipisicing elit, sed do eiusmod tempor
@@ -188,7 +177,7 @@
       <div class="col-md-5 mr-auto">
         <div class="progress-list__skill">
           <p>
-            <span class="progress-list__skill-title">html5</span>
+            <span class="progress-list__skill-title">excel&nbsp;</span>
             <span class="progress-list__skill-value">80%</span>
           </p>
           <div class="progress">
