--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             </dl>
           </div>
           <p class="personal-profile__social">
-            <a href="" target="_blank"><i class="fa fa-github"></i></a>
+            
             <a href="www.linkedin.com/in/haseeb-minhas" target="_blank"><i class="fa fa-linkedin-square"></i></a>
             <a href="https://www.facebook.com/profile.php?id=100004410752100" target="_blank"><i class="fa fa-facebook-square"></i></a>
           </p>
@@ -103,7 +103,7 @@
         <h2 id="hello_header" class="section__title">Hi_</h2>
         <p class="section__description">
           My name is Haseeb. I am a hard working, highly motivated, and enthusiastic young professional with an aim to pursue a degree in&nbsp; &nbsp;Management Informations system with a minor in accounting and marketing. I believe helping others and doing hardwork is the key to success. I make it a habit to work beyond expectations in order to grow both myself, and the organizations I am a part of. With the growth of technology in the financial field, I am pursuing a relevant education in order to serve emerging business.</p>
-        <a href="" class="section_btn site-btn"><img src="assets/img/img_btn_icon.png" alt="">Download CV</a>
+        <a href="/Resume_Haseeb_Minhas_2021 (6).pdf" class="section_btn site-btn"><img src="assets/img/img_btn_icon.png" alt="">Download CV</a>
       </div>
     </div>
   </section>
@@ -116,8 +116,8 @@
     <div class="row">
       <div class="col-md-10">
         <h2 id="resume_header" class="section__title">Resume_</h2>
-        <p class="section__description">
-        &nbsp; </p>
+        <p class="section__description">&nbsp;
+         </p>
       </div>
     </div>
     <div class="row">
@@ -139,8 +139,8 @@
         <div class="resume-list__block">
           <p class="resume-list__block-title">Head Start School System</p>
           <p class="resume-list__block-date">2004 - 2017</p>
-          <p>
-          &nbsp; </p>
+          <p>&nbsp;
+           </p>
         </div>
       </div>
     </div>
@@ -157,8 +157,8 @@
         <div class="resume-list__block">
           <p class="resume-list__block-title">DePaul university- print and mailing services</p>
           <p class="resume-list__block-date">2004 - 2005</p>
-          <p>
-          &nbsp; </p>
+          <p>&nbsp;
+           </p>
         </div>
         <div class="resume-list__block">
           <p class="resume-list__block-title">minhas traders - import manager&nbsp;</p>
