--- a/index.html
+++ b/index.html
@@ -156,17 +156,24 @@
         </div>
         <div class="resume-list__block">
           <p class="resume-list__block-title">DePaul university- print and mailing services</p>
-          <p class="resume-list__block-date">2004 - 2005</p>
-          <p>&nbsp;
-           </p>
+          <p class="resume-list__block-date">2020 - 2021</p>
+          <p><ul>
+			<li>● Sort, deliver, and pick-up mail, parcels, and print jobs throughout the Lincoln Park Campus. (40%)</li>
+			<li>● Log parcels using tracking software. (20%)</li>
+			<li>● Answering phones and assisting walk-in customers. (20%)</li>
+			<li>● Look up, sort, and return ambiguously addressed mail for customers (10%)</li>
+			<li>● Prepare outgoing mail and parcels. (10%)</li>
+			</ul>
+          </p>
         </div>
         <div class="resume-list__block">
           <p class="resume-list__block-title">minhas traders - import manager&nbsp;</p>
           <p class="resume-list__block-date">2003 - 2006</p>
           <p>
-            Programmer Lorem ipsum dolor sit amet, consecte tur adipisicing elit, sed do eiusmod tempor
-            incididunt ut
-          </p>
+            ●	Assist customers with any products they need help with.<br>
+●	Attend all the customer service phone calls and assist them.<br>
+●	Make sure all the inventory is up to date.<br>
+●	Discuss different products to promote each week and to increase their sales. </p>
         </div>
       </div>
     </div>
