--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
           <p class="resume-list__block-title">Alpha college&nbsp;</p>
           <p class="resume-list__block-date">2017 - 2019</p>
           <p>
-          &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; A levels in Maths, Accounting , Business&nbsp;&nbsp;</p>
+           A levels in Maths, Accounting , Business&nbsp;&nbsp;</p>
         </div>
         <div class="resume-list__block">
           <p class="resume-list__block-title">Head Start School System</p>
@@ -151,29 +151,30 @@
           <p class="resume-list__block-title">Materials xchange</p>
           <p class="resume-list__block-date">Sep 2021 - Present&nbsp;&nbsp;</p>
           <p>
-            Senior Full Stack Developer
+            ● Communicating with suppliers and buyers in order to bring business<br> ● Sending FOB invoices to all buyers <br>● Responds to customer inquiries and assist with solving customer concerns <br>● Provides friendly, courteous customer service. Acknowledges customers immediately <br>● Manage customer documents and information in an organized, efficient, and secure manner
           </p>
         </div>
         <div class="resume-list__block">
           <p class="resume-list__block-title">DePaul university- print and mailing services</p>
           <p class="resume-list__block-date">2020 - 2021</p>
           <p><ul>
-			<li>● Sort, deliver, and pick-up mail, parcels, and print jobs throughout the Lincoln Park Campus. (40%)</li>
-			<li>● Log parcels using tracking software. (20%)</li>
-			<li>● Answering phones and assisting walk-in customers. (20%)</li>
-			<li>● Look up, sort, and return ambiguously addressed mail for customers (10%)</li>
-			<li>● Prepare outgoing mail and parcels. (10%)</li>
+			<li>● Sort, deliver, and pick-up mail, parcels, and print jobs throughout the Lincoln Park Campus. </li>
+			<li>● Log parcels using tracking software. </li>
+			<li>● Answering phones and assisting walk-in customers. </li>
+			<li>● Look up, sort, and return ambiguously addressed mail for customers </li>
+			<li>● Prepare outgoing mail and parcels. </li>
 			</ul>
           </p>
         </div>
         <div class="resume-list__block">
           <p class="resume-list__block-title">minhas traders - import manager&nbsp;</p>
           <p class="resume-list__block-date">2003 - 2006</p>
-          <p>
-            ●	Assist customers with any products they need help with.<br>
-●	Attend all the customer service phone calls and assist them.<br>
-●	Make sure all the inventory is up to date.<br>
-●	Discuss different products to promote each week and to increase their sales. </p>
+          <p> ●	Assist customers with any products they need help with.<br>
+            ●	Attend all the customer service phone calls and assist them.<br>
+            ●	Make sure all the inventory is up to date.<br>
+            ●	Discuss different products to promote each week and to increase their sales.<br>
+			●	Responds to client enquiries and assists in the resolution of consumer issues</p>
+         
         </div>
       </div>
     </div>
@@ -184,17 +185,17 @@
       <div class="col-md-5 mr-auto">
         <div class="progress-list__skill">
           <p>
-            <span class="progress-list__skill-title">excel&nbsp;</span>
-            <span class="progress-list__skill-value">80%</span>
+            <span class="progress-list__skill-title">Microsoft Office&nbsp;</span>
+            <span class="progress-list__skill-value">90%</span>
           </p>
           <div class="progress">
-            <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" >
+            <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" >
             </div>
           </div>
         </div>
         <div class="progress-list__skill">
           <p>
-            <span class="progress-list__skill-title">css3</span>
+            <span class="progress-list__skill-title">SQL</span>
             <span class="progress-list__skill-value">70%</span>
           </p>
           <div class="progress">
@@ -202,31 +203,11 @@
             </div>
           </div>
         </div>
-        <div class="progress-list__skill">
-          <p>
-            <span class="progress-list__skill-title">java script</span>
-            <span class="progress-list__skill-value">90%</span>
-          </p>
-          <div class="progress">
-            <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
-            </div>
-          </div>
-        </div>
-        <div class="progress-list__skill">
-          <p>
-            <span class="progress-list__skill-title">jquery</span>
-            <span class="progress-list__skill-value">80%</span>
-          </p>
-          <div class="progress">
-            <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
-            </div>
-          </div>
-        </div>
-      </div>
+</div>
       <div class="col-md-5 mr-auto">
         <div class="progress-list__skill">
           <p>
-            <span class="progress-list__skill-title">bootstrap 3</span>
+            <span class="progress-list__skill-title">Python</span>
             <span class="progress-list__skill-value">80%</span>
           </p>
           <div class="progress">
@@ -236,27 +217,7 @@
         </div>
         <div class="progress-list__skill">
           <p>
-            <span class="progress-list__skill-title">grunt</span>
-            <span class="progress-list__skill-value">60%</span>
-          </p>
-          <div class="progress">
-            <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
-            </div>
-          </div>
-        </div>
-        <div class="progress-list__skill">
-          <p>
-            <span class="progress-list__skill-title">git</span>
-            <span class="progress-list__skill-value">90%</span>
-          </p>
-          <div class="progress">
-            <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
-            </div>
-          </div>
-        </div>
-        <div class="progress-list__skill">
-          <p>
-            <span class="progress-list__skill-title">adobe photoshop</span>
+            <span class="progress-list__skill-title">HTML/CSS</span>
             <span class="progress-list__skill-value">80%</span>
           </p>
           <div class="progress">
@@ -264,7 +225,7 @@
             </div>
           </div>
         </div>
-      </div>
+</div>
     </div>
   </section>
 <!--Resume-->
@@ -291,23 +252,15 @@
     <div class="portfolio-cards">
       <div class="row project-card" data-toggle="modal" data-target="#portfolioModal" data-portfolio-tag="web-sites">
         <div class="col-md-6 col-lg-5 project-card__img">
-          <img class="" src="assets/img/img_project_1_mono.png" alt="project-img">
+          <img class="" src="/Ebay-Breach.png" alt="project-img">
         </div>
         <div class="col-md-6 col-lg-7 project-card__info">
-          <h3 class="project-card__title">Mobile and desktop app for London hostel store  </h3>
+          <h3 class="project-card__title">Technology Report - Ebay Breach  </h3>
           <p class="project-card__description">
-            Do answered bachelor occasion in of offended no concerns. Supply worthy warmth branch of no ye.
-            Voice tried known to as my to. Though wished merits or be. Alone visit use these smart rooms ham.
+            In the 21st century, it is impossible to run a business without an online presence and along with it comes a whole set of risks. One of them being of data breaches. Upon conducting research on the infamous eBay breach and similar other tasks; I intend to learn from their mistakes and avoid repeating them. I believe true advancement only comes when you not only learn from your mistakes but also from the mistakes of those around you. The takeaway from all my research was not limited to the breach itself but how poorly it was handled via eBay, it made the users feel neglected, and unsafe. It broke their trust, remunerations of which could still be seen to this day. Despite eBay’s endless efforts to rectify them later. In the future I intend on being a conscientious owner. I intend to prosper by providing my consumers the best of everything which includes not only deals but also a trust which assured them that they are in safe hands.
           </p>
-          <p class="project-card__stack">Used stack:</p>
-          <ul class="tags">
-            <li>html5</li>
-            <li>css3</li>
-            <li>JavaScript</li>
-            <li>bower</li>
-            <li>grunt</li>
-          </ul>
-          <a href="" class="project-card__link">www.superapp.com</a>
+          
+          <a href="" class="project-card__link">Download Report</a>
         </div>
       </div>
       <div class="row project-card"  data-toggle="modal" data-target="#portfolioModal" data-portfolio-tag="mobile apps">
