--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
     <div class="portfolio-cards">
       <div class="row project-card" data-toggle="modal" data-target="#portfolioModal" data-portfolio-tag="web-sites">
         <div class="col-md-6 col-lg-5 project-card__img">
-          <img class="" src="/Ebay-Breach.png" alt="project-img">
+          <img class="" src="/Ebay-Breach1.png" alt="project-img">
         </div>
         <div class="col-md-6 col-lg-7 project-card__info">
           <h3 class="project-card__title">Technology Report - Ebay Breach  </h3>
