--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
           <img class="" src="/siut.png" alt="project-img">
         </div>
         <div class="col-md-6 col-lg-7 project-card__info">
-          <h3 class="project-card__title">Sindh Institute Of Urology & Transplantation [SIUT]</h3>
+          <h3 class="project-card__title">Sindh Institute Of Urology and Transplantation [SIUT]</h3>
           <p class="project-card__description">
             I’ve been coordinating volunteer programs at SIUT back in Pakistan for a couple years now. The task includes efficient coordination, organization and implementation of the entire 6day programme for a batch of approximately 200+ junior volunteers. The agenda revolves around hospital ( labs, wards, record rooms, etc) rounds, healthcare lectures, first aid courses, and skills lab sessions. The experience has helped me gather a ton of leadership experience, the art of analysing people quickly, coordinating events, improvising on the ground and handling new situations with confidence. In the future I hope to be an understanding, humble yet firm and inspiring business leader; which I think can not be accomplished without polishing my skills at every chance I get.
           </p>
