--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
           </div>
           <p class="personal-profile__social">
             
-            <a href="www.linkedin.com/in/haseeb-minhas" target="_blank"><i class="fa fa-linkedin-square"></i></a>
+            <a href="https://www.linkedin.com/in/haseeb-minhas" target="_blank"><i class="fa fa-linkedin-square"></i></a>
             <a href="https://www.facebook.com/profile.php?id=100004410752100" target="_blank"><i class="fa fa-facebook-square"></i></a>
           </p>
         </div>
