--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
       </div>
       <div class="row project-card"  data-toggle="modal" data-target="#portfolioModal" data-portfolio-tag="mobile apps">
         <div class="col-md-6 col-lg-5 project-card__img">
-          <img class="" src="/siut.png" alt="project-img">
+          <img class="" src="/siut.jpeg" alt="project-img">
         </div>
         <div class="col-md-6 col-lg-7 project-card__info">
           <h3 class="project-card__title">Sindh Institute Of Urology and Transplantation [SIUT]</h3>
