--- a/index.html
+++ b/index.html
@@ -276,178 +276,13 @@
           <a href="https://siut.org/std-volunteer-program-june-2019.php" class="project-card__link">https://siut.org/std-volunteer-program-june-2019.php</a>
         </div>
       </div>
-      <div class="row project-card"  data-toggle="modal" data-target="#portfolioModal" data-portfolio-tag="landing-pages">
-        <div class="col-md-6 col-lg-5 project-card__img">
-        <img class="" src="assets/img/img_project_3_mono.png" alt="project-img">
-      </div>
-        <div class="col-md-6 col-lg-7 project-card__info">
-        <h3 class="project-card__title">Admin template for Photo Service</h3>
-        <p class="project-card__description">
-          Do answered bachelor occasion in of offended no concerns. Supply worthy warmth branch of no ye.
-          Voice tried known to as my to. Though wished merits or be. Alone visit use these smart rooms ham.
-        </p>
-        <p class="project-card__stack">Used stack:</p>
-        <ul class="tags">
-          <li>html5</li>
-          <li>css3</li>
-          <li>JavaScript</li>
-          <li>BEM</li>
-          <li>bower</li>
-          <li>grunt</li>
-        </ul>
-        <a href="" class="project-card__link">www.coolphoto.com</a>
-      </div>
-      </div>
-    </div>
+</div>
   </section>
 <!--Portfolio-->
 
-<!--Testimonials-->
-  <div id="testimonials" class="section">
-    <div class="background slider-carousel" style="background-image: url(assets/img/img_bg_main.jpg);">
-      <div class="container">
-        <div id="carouselTestimonials" class="carousel slide" data-ride="carousel">
-          <ol class="carousel-indicators">
-            <li data-target="#carouselTestimonials" data-slide-to="0" class="active"></li>
-            <li data-target="#carouselTestimonials" data-slide-to="1"></li>
-            <li data-target="#carouselTestimonials" data-slide-to="2"></li>
-            <li data-target="#carouselTestimonials" data-slide-to="3"></li>
-          </ol>
-          <div class="carousel-inner" role="listbox">
-            <div class="carousel-item active">
-              <div class="row">
-                <div class="col-md-10 col-sm-10 col-10 mr-auto ml-auto">
-                  <p class="slider-carousel__title">Antonio Anderson</p>
-                  <p class="slider-carousel__caption">Project: Landin page for travel company</p>
-                  <hr>
-                  <p class="slider-carousel__description">Up or well must less rent read walk so be. Easy
-                    sold at do hour sing spot. Any meant has cease too the decay. Since party burst am
-                    it match. By or blushes between besides offices noisier as. Sending do brought winding
-                    compass in. Easy sold at do hour sing spot less rent read walk so be. Any meant has
-                    cease too the decay. </p>
-                </div>
-              </div>
-            </div>
-            <div class="carousel-item">
-              <div class="row">
-                <div class="col-md-10 col-sm-10 col-10 mr-auto ml-auto">
-                  <p class="slider-carousel__title">Antonio Anderson</p>
-                  <p class="slider-carousel__caption">Project: Landin page for travel company</p>
-                  <hr>
-                  <p class="slider-carousel__description">Up or well must less rent read walk so be. Easy
-                    sold at do hour sing spot. Any meant has cease too the decay. Since party burst am
-                    it match. By or blushes between besides offices noisier as. Sending do brought winding
-                    compass in. Easy sold at do hour sing spot less rent read walk so be. Any meant has
-                    cease too the decay. </p>
-                </div>
-              </div>
-            </div>
-            <div class="carousel-item">
-              <div class="row">
-                <div class="col-md-10 col-sm-10 col-10 mr-auto ml-auto">
-                  <p class="slider-carousel__title">Antonio Anderson</p>
-                  <p class="slider-carousel__caption">Project: Landin page for travel company</p>
-                  <hr>
-                  <p class="slider-carousel__description">Up or well must less rent read walk so be. Easy
-                    sold at do hour sing spot. Any meant has cease too the decay. Since party burst am
-                    it match. By or blushes between besides offices noisier as. Sending do brought winding
-                    compass in. Easy sold at do hour sing spot less rent read walk so be. Any meant has
-                    cease too the decay. </p>
-                </div>
-              </div>
-            </div>
-            <div class="carousel-item">
-              <div class="row">
-                <div class="col-md-10 col-sm-10 col-10 mr-auto ml-auto">
-                  <p class="slider-carousel__title">Antonio Anderson</p>
-                  <p class="slider-carousel__caption">Project: Landin page for travel company</p>
-                  <hr>
-                  <p class="slider-carousel__description">Up or well must less rent read walk so be. Easy
-                    sold at do hour sing spot. Any meant has cease too the decay. Since party burst am
-                    it match. By or blushes between besides offices noisier as. Sending do brought winding
-                    compass in. Easy sold at do hour sing spot less rent read walk so be. Any meant has
-                    cease too the decay. </p>
-                </div>
-              </div>
-            </div>
-          </div>
-          <a class="carousel-control-prev" href="#testimonials" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-          </a>
-          <a class="carousel-control-next" href="#testimonials" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-          </a>
-          <div class="slider-carousel__circle">
-            <p><i class="fa fa-quote-right" aria-hidden="true"></i></p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-<!--Testimonials-->
+<!--Testimonials--><!--Testimonials-->
 
-<!--Blog-->
-  <section id="blog" class="container section">
-    <div class="row">
-      <div class="col-md-12">
-        <h2 id="blog_header" class="section__title">Latest Posts_</h2>
-      </div>
-    </div>
-
-    <div class="row post-cards">
-      <div class="col-md-4">
-        <a href="blog.html">
-          <div class="post-cards__card">
-            <div class="post-cards__img">
-              <img src="assets/img/img_blog_1.png" alt="blog_img">
-            </div>
-            <div class="post-cards__info">
-              <p class="post-cards__date">October 22, 2017</p>
-              <h3 class="post-cards_title">How to use css-preprocessor</h3>
-              <p class="post-cards_description">Lorem ipsum dolor sit amet, consectetur
-                adipisicing elit, sed do eiusmod tempr incididunt...
-              </p>
-            </div>
-          </div>
-        </a>
-      </div>
-      <div class="col-md-4">
-        <a href="blog.html">
-          <div class="post-cards__card">
-            <div class="post-cards__img">
-              <img src="assets/img/img_blog_2.png" alt="blog_img">
-            </div>
-            <div class="post-cards__info">
-              <p class="post-cards__date">October 22, 2017</p>
-              <h3 class="post-cards_title">How I organize my work with code</h3>
-              <p class="post-cards_description">Lorem ipsum dolor sit amet, consectetur
-                adipisicing elit, sed do eiusmod tempr incididu...
-              </p>
-            </div>
-          </div>
-        </a>
-      </div>
-      <div class="col-md-4">
-        <a href="blog.html">
-          <div class="post-cards__card">
-            <div class="post-cards__img">
-              <img src="assets/img/img_blog_3.png" alt="blog_img">
-            </div>
-            <div class="post-cards__info">
-              <p class="post-cards__date">October 22, 2017</p>
-              <h3 class="post-cards_title">SVG sprites vs Icon Font</h3>
-              <p class="post-cards_description">Lorem ipsum dolor sit amet, consectetur
-                adipisicing elit, sed do eiusmod tempr incididu...
-              </p>
-            </div>
-          </div>
-        </a>
-      </div>
-    </div>
-  </section>
-<!--Blog-->
+<!--Blog--><!--Blog-->
 
 <!--Contact-->
   <div class="background" style="background-image: url(assets/img/img_bg_main.jpg)">
