--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
             In the 21st century, it is impossible to run a business without an online presence and along with it comes a whole set of risks. One of them being of data breaches. Upon conducting research on the infamous eBay breach and similar other tasks; I intend to learn from their mistakes and avoid repeating them. I believe true advancement only comes when you not only learn from your mistakes but also from the mistakes of those around you. The takeaway from all my research was not limited to the breach itself but how poorly it was handled via eBay, it made the users feel neglected, and unsafe. It broke their trust, remunerations of which could still be seen to this day. Despite eBay’s endless efforts to rectify them later. In the future I intend on being a conscientious owner. I intend to prosper by providing my consumers the best of everything which includes not only deals but also a trust which assured them that they are in safe hands.
           </p>
           
-          <a href="" class="project-card__link">Download Report</a>
+          <a href="/ebay-breach.docx" class="project-card__link">Download Report</a>
         </div>
       </div>
       <div class="row project-card"  data-toggle="modal" data-target="#portfolioModal" data-portfolio-tag="mobile apps">
