--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
       </div>
     </div>
     <div class="portfolio-cards">
-      <div class="row project-card" data-toggle="modal" data-target="#portfolioModal" data-portfolio-tag="web-sites">
+      <div class="row project-card" data-toggle="" data-target="" data-portfolio-tag="web-sites">
         <div class="col-md-6 col-lg-5 project-card__img">
           <img class="" src="/Ebay-Breach1.png" alt="project-img">
         </div>
@@ -263,7 +263,7 @@
           <a href="/ebay-breach.docx" class="project-card__link">Download Report</a>
         </div>
       </div>
-      <div class="row project-card"  data-toggle="modal" data-target="#portfolioModal" data-portfolio-tag="mobile apps">
+      <div class="row project-card"  data-toggle="" data-target="" data-portfolio-tag="mobile apps">
         <div class="col-md-6 col-lg-5 project-card__img">
           <img class="" src="/siut.jpeg" alt="project-img">
         </div>
