--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 <!-- Mobile menu -->
 
 <!--Header-->
-  <header class="main-header" style="background-image: url(assets/img/img_bg_header.jpg)">
+  <header class="main-header" style="background-image: url(assets/img/WhatsApp Image 2021-04-18 at 12.45.33 PM.jpeg)">
     <div class="container">
       <div class="row personal-profile">
         <div class="col-md-4 personal-profile__avatar">
