--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
       <div class="col-md-10">
         <h2 id="hello_header" class="section__title">Hi_</h2>
         <p class="section__description">
-          My name is Haseeb. I am a hard working, highly motivated, and enthusiastic young professional with an aim to pursue a degree in&nbsp; &nbsp;Management Informations system with a minor in accounting and marketing. I believe helping others and doing hardwork is the key to success. I make it a habit to work beyond expectations in order to grow both myself, and the organizations I am a part of. With the growth of technology in the financial field, I am pursuing a relevant education in order to serve emerging business.</p>
+          My name is Haseeb. I am a hard working, highly motivated, and enthusiastic young professional with an aim to pursue a degree in&nbsp; &nbsp;Management Informations system with a minor in accounting and marketing. I believe helping others and doing hardwork is the key to success. I make it a habit to work beyond expectations in order to grow both myself, and the organizations I am a part of. With the growth of technology in the financial field, I am pursuing a relevant education in order to serve emerging businesses.</p>
         <a href="/Resume_Haseeb_Minhas_2021 (6).pdf" class="section_btn site-btn"><img src="assets/img/img_btn_icon.png" alt="">Download CV</a>
       </div>
     </div>
