--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
           </p>
         </div>
         <div class="resume-list__block">
-          <p class="resume-list__block-title">minhas traders - import manager&nbsp;</p>
+          <p class="resume-list__block-title">Crown trading company - import manager&nbsp;</p>
           <p class="resume-list__block-date">2003 - 2006</p>
           <p> ●	Assist customers with any products they need help with.<br>
             ●	Attend all the customer service phone calls and assist them.<br>
@@ -335,7 +335,7 @@
             </form>
           </div>
           <div class="footer">
-            <p>© 2021 Haseeb Minhas All Rights Reserved</p>
+            <p>© 2022 Haseeb Minhas All Rights Reserved | Last Updated : 10/12/2022</p>
           </div>
         </div>
       </div>
